# kerr_integrator

./: Cargo.toml  ballistic_graph.json  outpu3t.json  stream_width.json
src/: constants.rs  derivatives.rs  functions.rs  kerrpy.py  main.rs  numeric_integrators.rs  numeric_solvers.rs  plotter.py  plotting.py  radial_derivative.rs  star_initialization.rs  stream_intersection.rs  structs.rs  tests.rs  tetrads.rs  trajectory_graph.rs
