[package]
name = "test2"
version = "0.1.0"
edition = "2021"

[dependencies]

egui_plot = "0.28.1"
roots = "0.0.8"
#eframe = "0.22.0"  # <-- "0.25.0"
plotters-backend = "0.3.6"
plotters = "0.3.6"

egui-plotter = { git = "https://github.com/ChatterMonkey/egui-plotter-update.git"}
egui = "0.28.0"  # <-- "0.25.0"
eframe = "0.28.0"